--- a/CourtApp.Web/Views/Shared/_Scripts.cshtml
+++ b/CourtApp.Web/Views/Shared/_Scripts.cshtml
@@ -14,17 +14,17 @@
 <script src="~/lib/bootstrap/dist/js/bootstrap-multiselect.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap-multiselect.min.js"></script>
 <script src="~/assets/ckeditor/ckeditor.js"></script>
-<script type="importmap">
+@* <script type="importmap">
     {
         "imports": {
-            @* "ckeditor5": "../../assets/vendor/ckeditor5.js",
-            "ckeditor5/": "../../assets/vendor/" *@
+            "ckeditor5": "../../assets/vendor/ckeditor5.js",
+            "ckeditor5/": "../../assets/vendor/"
             "ckeditor5": "https://cdn.ckeditor.com/ckeditor5/43.1.0/ckeditor5.js",
             "ckeditor5/": "https://cdn.ckeditor.com/ckeditor5/43.1.0/"
         }
     }
-</script>
-<script type="module">
+</script> *@
+@* <script type="module">
     import {
         ClassicEditor,
         Essentials,
@@ -62,4 +62,4 @@
         .catch(error => {
             console.error(error);
         });
-</script>
+</script> *@
