--- a/CourtApp.Web/Areas/LawyerDiary/Views/CourtMaster/_CreateOrEdit.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/CourtMaster/_CreateOrEdit.cshtml
@@ -46,7 +46,9 @@
                 <label class="col-md-3 col-form-label">Court Type</label>
                 <div class="col-md-9">
                     <div class="input-group">
-                        <select name="CourtTypeId" class="form-control select2bs4" id="CourtTypeId" asp-for="CourtTypeId" placeholder="Select Court Type" asp-items="@Model.CourtTypes">
+                        <select name="CourtTypeId" class="form-control select2bs4" id="CourtTypeId"
+                                asp-for="CourtTypeId" placeholder="Select Court Type"
+                                asp-items="@Model.CourtTypes">
                             <option></option>
                         </select>
                     </div>
@@ -65,74 +67,177 @@
                     <span asp-validation-for="DistrictCode" class="text-danger"></span>
                 </div>
             </div>
-            <div class="form-group row div_hide" id="c_district">
-                <label class="col-md-3 col-form-label">@localizer["Court District"]</label>
-                <div class="col-md-9">
-                    <div class="input-group">
-                        <select name="CourtDistrictId" class="form-control select2bs4" id="CourtDistrictId" asp-for="CourtDistrictId">
-                        </select>
+            @if (@Model.Id == Guid.Empty)
+            {
+                <div class="form-group row div_hide" id="c_district">
+                    <label class="col-md-3 col-form-label">@localizer["Court District"]</label>
+                    <div class="col-md-9">
+                        <div class="input-group">
+                            <select name="CourtDistrictId" class="form-control select2bs4" id="CourtDistrictId" asp-for="CourtDistrictId">
+                            </select>
+                        </div>
+                        <span asp-validation-for="CourtDistrictId" class="text-danger"></span>
                     </div>
-                    <span asp-validation-for="CourtDistrictId" class="text-danger"></span>
                 </div>
-            </div>
 
-            <div class="form-group row div_hide" id="d_court_Complex">
-                <label class="col-md-3 col-form-label">@localizer["Court Complex"]</label>
-                <div class="col-md-9">
-                    <div class="input-group">
-                        <select name="CourtComplexId" class="form-control select2bs4" id="CourtComplexId" asp-for="CourtComplexId"
-                               >
-                        </select>
+                <div class="form-group row div_hide" id="d_court_Complex">
+                    <label class="col-md-3 col-form-label">@localizer["Court Complex"]</label>
+                    <div class="col-md-9">
+                        <div class="input-group">
+                            <select name="CourtComplexId" class="form-control select2bs4" id="CourtComplexId" asp-for="CourtComplexId">
+                            </select>
+                        </div>
+                        <span asp-validation-for="CourtComplexId" class="text-danger"></span>
                     </div>
-                    <span asp-validation-for="CourtComplexId" class="text-danger"></span>
                 </div>
-            </div>
 
-            <div class="form-group row div_hide" id="d_high_court_name">
-                <label class="col-md-3 col-form-label">High Court Name</label>
-                <div class="col-md-9">
-                    <div class="input-group">
-                        <input type="text" placeholder="Please enter high court name" asp-for="CourtName" name="CourtName" class="form-control">
+                <div class="form-group row div_hide" id="d_high_court_name">
+                    <label class="col-md-3 col-form-label">High Court Name</label>
+                    <div class="col-md-9">
+                        <div class="input-group">
+                            <input type="text" placeholder="Please enter high court name" asp-for="CourtName" name="CourtName" class="form-control">
+                        </div>
+                        <span asp-validation-for="CourtName" class="text-danger"></span>
                     </div>
-                    <span asp-validation-for="CourtName" class="text-danger"></span>
                 </div>
-            </div>
-            <div class="form-group row">
-                <fieldset class="scheduler-border">
-                    <legend class="scheduler-border">Court/Bench Detail</legend>
-                    <table id="tblCourtBench" border="1" style="width:100%!important">
-                        <thead>
-                            <tr>
-                                <th width="30%"><label class="col-md-3 col-form-label">Court/Bench</label></th>
-                                <th width="60%"><label class="col-md-3 col-form-label">Address</label></th>
-                                <th width="10%"></th>
-                            </tr>
-                        </thead>
-                        <tbody class="data-repeater">
-                            <tr class="kolom">
-                                <td><input type="text" asp-for="CourtBenches[0].CourtBench_En" width="300px" placeholder="Enter court/Bench name" class="form-control" /></td>
-                                <td><input type="text" asp-for="CourtBenches[0].Address" width="300px" placeholder="Enter court/Bench adress" class="form-control" /></td>
-                                <td class="btn-repeater">
-                                    <button class="add-btn-repeat btn btn-success" onclick="addElement($(this))" type="button"><i class="fa fa-plus" aria-hidden="true"></i></button>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </fieldset>
-            </div>
-            <div class="form-group row">
-                <div class="col-md-3">
+
+                <div class="form-group row">
+                    <fieldset class="scheduler-border">
+                        <legend class="scheduler-border">Court/Bench Detail</legend>
+                        <table id="tblCourtBench" border="1" style="width:100%!important">
+                            <thead>
+                                <tr>
+                                    <th width="30%"><label class="col-md-3 col-form-label">Court/Bench</label></th>
+                                    <th width="60%"><label class="col-md-3 col-form-label">Address</label></th>
+                                    <th width="10%"></th>
+                                </tr>
+                            </thead>
+                            <tbody class="data-repeater">
+                                <tr class="kolom">
+                                    <td><input type="text" asp-for="CourtBenches[0].CourtBench_En" width="300px" placeholder="Enter court/Bench name" class="form-control" /></td>
+                                    <td><input type="text" asp-for="CourtBenches[0].Address" width="300px" placeholder="Enter court/Bench adress" class="form-control" /></td>
+                                    <td class="btn-repeater">
+                                        <button class="add-btn-repeat btn btn-success" onclick="addElement($(this))" type="button"><i class="fa fa-plus" aria-hidden="true"></i></button>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </fieldset>
                 </div>
-            </div>
+
+                <div class="form-group row">
+                    <div class="col-md-3">
+                    </div>
+                </div>
+            }
+            else
+            {
+                @if (Model.IsHighCourt != true && Model.CourtBenches != null)
+                {
+                    <div class="form-group row">
+                        <label class="col-md-3 col-form-label">@localizer["Court District"]</label>
+                        <div class="col-md-9">
+                            <div class="input-group">
+                                <select class="form-control select2bs4"
+                                        asp-for="CourtDistrictId" asp-items="@Model.CourtDistricts">
+                                </select>
+                            </div>
+                            <span asp-validation-for="CourtDistrictId" class="text-danger"></span>
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label class="col-md-3 col-form-label">@localizer["Court Complex"]</label>
+                        <div class="col-md-9">
+                            <div class="input-group">
+                                <select class="form-control select2bs4"
+                                        asp-for="CourtComplexId"
+                                        asp-items="@Model.CourtComplexes">
+                                </select>
+                            </div>
+                            <span asp-validation-for="CourtComplexId" class="text-danger"></span>
+                        </div>
+                    </div>
+                }
+                else
+                {
+                    <div class="form-group row">
+                        <label class="col-md-3 col-form-label">High Court Name</label>
+                        <div class="col-md-9">
+                            <div class="input-group">
+                                <input type="text" placeholder="Please enter high court name"
+                                       asp-for="CourtName"
+                                       class="form-control">
+                            </div>
+                            <span asp-validation-for="CourtName" class="text-danger"></span>
+                        </div>
+                    </div>
+                }
+
+                <div class="form-group row">
+                    <fieldset class="scheduler-border">
+                        <legend class="scheduler-border">Court/Bench Detail</legend>
+                        <table id="tblCourtBench" border="1" style="width:100%!important">
+                            <thead>
+                                <tr>
+                                    <th width="30%"><label class="col-md-3 col-form-label">Court/Bench</label></th>
+                                    <th width="60%"><label class="col-md-3 col-form-label">Address</label></th>
+                                    <th width="10%"></th>
+                                </tr>
+                            </thead>
+                            <tbody class="data-repeater">
+                                @if (Model.CourtBenches != null)
+                                {
+                                    @for (int i = 0; i < Model.CourtBenches.Count; i++)
+                                    {
+                                        <tr class="kolom">
+                                            <td><input type="text" asp-for="CourtBenches[i].CourtBench_En" width="300px" placeholder="Enter court/Bench name" class="form-control" /></td>
+                                            <td><input type="text" asp-for="CourtBenches[i].Address" width="300px" placeholder="Enter court/Bench adress" class="form-control" /></td>
+                                            @if (i == 0)
+                                            {
+                                                <td class="btn-repeater">
+                                                    <button class="add-btn-repeat btn btn-success" onclick="addElement($(this))" type="button"><i class="fa fa-plus" aria-hidden="true"></i></button>
+                                                </td>
+                                            }
+                                            else
+                                            {
+                                                <td class="btn-repeater">
+                                                    <button type="button" onclick="removeKolom($(this))" class="btn btn-warning"><i class="fa fa-trash" aria-hidden="true"></i></button>
+                                                </td>
+
+                                            }
+
+                                        </tr>
+                                    }
+                                }
+                                else
+                                {
+                                    <tr class="kolom">
+                                        <td><input type="text" asp-for="CourtBenches[0].CourtBench_En" width="300px" placeholder="Enter court/Bench name" class="form-control" /></td>
+                                        <td><input type="text" asp-for="CourtBenches[0].Address" width="300px" placeholder="Enter court/Bench adress" class="form-control" /></td>
+                                        <td class="btn-repeater">
+                                            <button class="add-btn-repeat btn btn-success" onclick="addElement($(this))" type="button"><i class="fa fa-plus" aria-hidden="true"></i></button>
+                                        </td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
+                    </fieldset>
+                </div>
+            }
         </div>
     </div>
-
     <div class="form-group justify-content-between" style="margin-bottom: 0px !important">
-        <button type="submit" class="btn btn-success">Save</button>
+        @{
+            string ButtonText = "Save";
+            if (Model.Id != Guid.Empty) ButtonText = "Update";
+        }
+        <button type="submit" class="btn btn-success">@ButtonText</button>
         <button type="submit" class="btn btn-default close-button" data-dismiss="modal">Cancel</button>
     </div>
 </form>
 <script type="text/javascript" language=javascript>
-    $.validator.unobtrusive.parse(document);      
+    $.validator.unobtrusive.parse(document);
+
 </script>
 <script src="~/js/lawyer/courtmaster.js"></script>
