--- a/CourtApp.Web/Areas/Litigation/Views/CaseManage/_CreateOrEdit.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseManage/_CreateOrEdit.cshtml
@@ -49,7 +49,7 @@
                         <div class="col-md-4">
                             <div class="input-group">
                                 <select class="form-control select2bs4" id="CourtTypeId" asp-for="CourtTypeId"
-                                        asp-items="@Model.CourtTypes" onchange="CourtTypeChange(this)">
+                                        asp-items="@Model.CourtTypes">
                                     <option></option>
                                 </select>
                             </div>
