--- a/CourtApp.Web/Areas/LawyerDiary/Views/WorkMasterSub/_CreateOrEdit.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/WorkMasterSub/_CreateOrEdit.cshtml
@@ -6,7 +6,7 @@
                 <label class="col-md-3 col-form-label">@localizer["Work Master"]</label>
                 <div class="col-md-9">
                     <div class="input-group">
-                        <select name="WorkId" class="form-control select2bs4" id="WMasterId" asp-for="WorkId" asp-items="@Model.WMasters">
+                        <select class="form-control select2bs4"  asp-for="WorkId" asp-items="@Model.WMasters">
                             <option></option>
                         </select>
                     </div>
@@ -21,6 +21,15 @@
                         <input type="text" asp-for="Name_En" name="Name_En" id="Name_En" class="form-control" />
                     </div>
                     <span asp-validation-for="Name_En" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label class="col-md-3 col-form-label">@localizer["Abbreviation"]</label>
+                <div class="col-md-9">
+                    <div class="input-group">
+                        <input type="text" asp-for="Abbreviation" class="form-control" />
+                    </div>
+                    <span asp-validation-for="Abbreviation" class="text-danger"></span>
                 </div>
             </div>
 
@@ -48,4 +57,16 @@
         <button type="submit" class="btn btn-default close-button" data-dismiss="modal">Cancel</button>
     </div>
 </form>
+<script type="text/javascript" language=javascript>
+    $.validator.unobtrusive.parse(document);
+    $(document).ready(function () {
+        $("#WorkId").select2({
+            placeholder: "Select a type",
+            theme: "bootstrap4",
+            escapeMarkup: function (m) {
+                return m;
+            }
+        });
+    });
+</script>
 
