--- a/CourtApp.Web/Areas/Litigation/Views/CaseManage/_CreateOrEdit.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseManage/_CreateOrEdit.cshtml
@@ -17,7 +17,7 @@
     }
 
 </style>
-@model CaseViewModel
+@model CaseUpseartViewModel
 <div class="card">
     <div class="col-sm-12" style="padding:20px">
         <partial name="_StatusMessage" model="Model.StatusMessage" />
@@ -53,7 +53,25 @@
                             </div>
                             <span asp-validation-for="CourtTypeId" class="text-danger"></span>
                         </div>
-                        @if (@Model.Id == Guid.Empty)
+                        <label class="col-md-2 col-form-label highCourt">@localizer["Bench"] (<span style="color:red">*</span>)</label>
+                        <div class="col-md-4 highCourt">
+                            <div class="input-group">
+                                <select class="form-control select2bs4" asp-for="BenchId"
+                                        asp-items="@Model.Courts">
+                                    <option></option>
+                                </select>
+                            </div>
+                            <span asp-validation-for="BenchId" class="text-danger"></span>
+                        </div>
+                        <label class="col-md-2 col-form-label Court">@localizer["Court District"] (<span style="color:red">*</span>)</label>
+                        <div class="col-md-4 Court">
+                            <div class="input-group">
+                                <select class="form-control select2bs4" id="CourtDistrictId" asp-for="CourtDistrictId" asp-items="@Model.CourtDistricts">
+                                    <option></option>
+                                </select>
+                            </div>
+                        </div>
+                       @*  @if (@Model.Id == Guid.Empty)
                         {
                             <label class="col-md-2 col-form-label highCourt">@localizer["Bench"] (<span style="color:red">*</span>)</label>
                             <div class="col-md-4 highCourt">
@@ -93,6 +111,7 @@
                                 <div class="col-md-4">
                                     <div class="input-group">
                                         <select class="form-control select2bs4" asp-for="BenchId"
+                                                id="BenchId"
                                                 asp-items="@Model.Courts">
                                             <option></option>
                                         </select>
@@ -100,11 +119,48 @@
                                     <span asp-validation-for="BenchId" class="text-danger"></span>
                                 </div>
                             }
-                        }
+                        } *@
 
                     </div>
+                    <div class="form-group row highCourt">
+                        <div class="form-group row ">
+                            <label class="col-md-2 col-form-label">@localizer["Strength"]</label>
+                            <div class="col-md-4">
+                                <div class="input-group">
+                                    <select class="form-control select2bs4" asp-for="StrengthId"
+                                            asp-items="@Model.Strengths">
+                                        <option></option>
+                                    </select>
+                                </div>
 
-                    @if (@Model.Id == Guid.Empty)
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group row Court">
+                        <div class="form-group row ">
+                            <label class="col-md-2 col-form-label">@localizer["Court Complex"] (<span style="color:red">*</span>)</label>
+                            <div class="col-md-4">
+                                <div class="input-group">
+                                    <select class="form-control select2bs4" asp-for="ComplexId" asp-items="@Model.ComplexBenchs">
+                                        <option></option>
+                                    </select>
+                                </div>
+                                <span asp-validation-for="ComplexId" class="text-danger"></span>
+                            </div>
+                            <label class="col-md-2 col-form-label">@localizer["Court"] (<span style="color:red">*</span>)</label>
+                            <div class="col-md-4">
+                                <div class="input-group">
+                                    <select class="form-control select2bs4" id="CourtId"
+                                            asp-for="CourtId"
+                                            asp-items="@Model.Courts">
+                                        <option></option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                   @*  @if (@Model.Id == Guid.Empty)
                     {
                         <div class="form-group row highCourt">
                             <div class="form-group row ">
@@ -125,16 +181,18 @@
                                 <label class="col-md-2 col-form-label">@localizer["Court Complex"] (<span style="color:red">*</span>)</label>
                                 <div class="col-md-4">
                                     <div class="input-group">
-                                        <select class="form-control select2bs4" asp-for="ComplexBenchId" asp-items="@Model.ComplexBenchs">
+                                        <select class="form-control select2bs4" asp-for="ComplexId" asp-items="@Model.ComplexBenchs">
                                             <option></option>
                                         </select>
                                     </div>
-                                    <span asp-validation-for="ComplexBenchId" class="text-danger"></span>
+                                    <span asp-validation-for="ComplexId" class="text-danger"></span>
                                 </div>
                                 <label class="col-md-2 col-form-label">@localizer["Court"] (<span style="color:red">*</span>)</label>
                                 <div class="col-md-4">
                                     <div class="input-group">
-                                        <select class="form-control select2bs4" id="CourtId" asp-for="CourtId" asp-items="@Model.Courts">
+                                        <select class="form-control select2bs4" id="CourtId"
+                                                asp-for="CourtId"
+                                                asp-items="@Model.Courts">
                                             <option></option>
                                         </select>
                                     </div>
@@ -150,7 +208,9 @@
                                 <label class="col-md-2 col-form-label">@localizer["Court Complex"] (<span style="color:red">*</span>)</label>
                                 <div class="col-md-4">
                                     <div class="input-group">
-                                        <select class="form-control select2bs4" asp-for="ComplexBenchId" asp-items="@Model.ComplexBenchs">
+                                        <select class="form-control select2bs4"
+                                                asp-for="ComplexId"
+                                                asp-items="@Model.ComplexBenchs">
                                             <option></option>
                                         </select>
                                     </div>
@@ -158,7 +218,9 @@
                                 <label class="col-md-2 col-form-label">@localizer["Court"] (<span style="color:red">*</span>)</label>
                                 <div class="col-md-4">
                                     <div class="input-group">
-                                        <select class="form-control select2bs4" asp-for="CourtId" asp-items="@Model.Courts">
+                                        <select class="form-control select2bs4"
+                                                asp-for="CourtId" id="CourtId"
+                                                asp-items="@Model.Courts">
                                             <option></option>
                                         </select>
                                     </div>
@@ -180,13 +242,15 @@
                             </div>
                         }
 
-                    }
+                    } *@
 
                     <div class="form-group row">
                         <label class="col-md-2 col-form-label">@localizer["Case Category"] (<span style="color:red">*</span>)</label>
                         <div class="col-md-4">
                             <div class="input-group">
-                                <select class="form-control select2bs4" id="CaseCategoryId" asp-for="CaseCategoryId" asp-items="@Model.CaseNatures">
+                                <select class="form-control select2bs4" id="CaseCategoryId"
+                                        asp-for="CaseCategoryId"
+                                        asp-items="@Model.CaseNatures">
                                     <option></option>
                                 </select>
                             </div>
@@ -195,7 +259,9 @@
                         <label class="col-md-2 col-form-label">@localizer["Case Type"] (<span style="color:red">*</span>)</label>
                         <div class="col-md-4">
                             <div class="input-group">
-                                <select name="CaseTypeId" class="form-control select2bs4" id="CaseTypeId" asp-for="CaseTypeId" asp-items="@Model.TypeOfCases">
+                                <select name="CaseTypeId" class="form-control select2bs4"
+                                        id="CaseTypeId" asp-for="CaseTypeId"
+                                        asp-items="@Model.TypeOfCases">
                                     <option></option>
                                 </select>
                             </div>
@@ -212,11 +278,13 @@
                         </div>
                         <div class="col-md-2">
                             <div class="input-group">
-                                <select name="FirstTitleCode" class="form-control select2bs4" id="FirstTitleCode" asp-for="FirstTitleCode" asp-items="@Model.FirstTitleList">
+                                <select class="form-control select2bs4"
+                                        id="FirstTitleCode"
+                                        asp-for="FTitleId" asp-items="@Model.FirstTitleList">
                                     <option></option>
                                 </select>
                             </div>
-                            <span asp-validation-for="FirstTitleCode" class="text-danger"></span>
+                            <span asp-validation-for="FTitleId" class="text-danger"></span>
                         </div>
                     </div>
 
@@ -234,11 +302,14 @@
                         </div>
                         <div class="col-md-2">
                             <div class="input-group">
-                                <select name="SecoundTitleCode" class="form-control select2bs4" id="SecoundTitleCode" asp-for="SecoundTitleCode" asp-items="@Model.SecondTitleList">
+                                <select class="form-control select2bs4"
+                                        id="SecoundTitleCode"
+                                        asp-for="STitleId"
+                                        asp-items="@Model.SecondTitleList">
                                     <option></option>
                                 </select>
                             </div>
-                            <span asp-validation-for="SecoundTitleCode" class="text-danger"></span>
+                            <span asp-validation-for="STitleId" class="text-danger"></span>
                         </div>
                     </div>
 
@@ -246,11 +317,11 @@
                         <label class="col-md-2 col-form-label">@localizer["Case Stage"] (<span style="color:red">*</span>)</label>
                         <div class="col-md-4">
                             <div class="input-group">
-                                <select class="form-control select2bs4" asp-for="CaseStageCode" asp-items="@Model.CaseStatusList">
+                                <select class="form-control select2bs4" asp-for="CaseStageId" asp-items="@Model.CaseStatusList">
                                     <option></option>
                                 </select>
                             </div>
-                            <span asp-validation-for="CaseStageCode" class="text-danger"></span>
+                            <span asp-validation-for="CaseStageId" class="text-danger"></span>
                         </div>
                         <label class="col-md-2 col-form-label">@localizer["Case No/Year"]</label>
                         <div class="col-md-2">
@@ -260,7 +331,9 @@
                         </div>
                         <div class="col-md-2">
                             <div class="input-group">
-                                <select name="CaseYear" class="form-control select2bs4" id="CaseYear" asp-for="CaseYear" asp-items="@Model.Years">
+                                <select name="CaseYear" class="form-control select2bs4"
+                                        id="CaseYear" asp-for="CaseYear"
+                                        asp-items="@Model.Years">
                                     <option></option>
                                 </select>
                             </div>
@@ -271,12 +344,16 @@
                         <label class="col-md-2 col-form-label">@localizer["Cis No/Year"]</label>
                         <div class="col-md-2">
                             <div class="input-group">
-                                <input type="text" placeholder="CIS Number" asp-for="CisNumber" name="CisNumber" id="CisNumber" class="form-control" />
+                                <input type="text" placeholder="CIS Number"
+                                       asp-for="CisNumber" name="CisNumber" id="CisNumber"
+                                       class="form-control" />
                             </div>
                         </div>
                         <div class="col-md-2">
                             <div class="input-group">
-                                <select name="CisYear" class="form-control select2bs4" id="CisYear" asp-for="CisYear" asp-items="@Model.Years">
+                                <select name="CisYear" class="form-control select2bs4"
+                                        id="CisYear" asp-for="CisYear"
+                                        asp-items="@Model.Years">
                                     <option></option>
                                 </select>
                             </div>
@@ -317,7 +394,7 @@
                     <partial name="_AgainstCaseDetail" model="Model" />
                 </div>
             </div>
-            
+
             <div class="form-group justify-content-between" style="margin-bottom: 0px !important">
                 <button type="submit" class="btn btn-success">Save</button>
                 <a onclick="jQueryModalGet('/Litigation/casemanage/OnGetClientInfo?CaseId=@Model.Id','Add Client')" class="btn btn-outline-success" style="dis">
@@ -331,6 +408,35 @@
 {
 
     <script src="~/js/litigation/managecase.js"></script>
+    <script>
+        $(document).ready(function () {
+            debugger;
+            var showHighCourt = @((bool)ViewBag.ShowHighCourt ? "true" : "false");
+            var AgIsHighCourt = @((bool)ViewBag.AgIsHighCourt ? "true" : "false");
+            var CaseId = "@(ViewBag.Id)";
+            if (CaseId != "00000000-0000-0000-0000-000000000000") {
+                if (showHighCourt == true) {
+                    $('.highCourt').css('display', 'block');
+                    $('.Court').css('display', 'none');
+                }
+                else {
+                    $('.highCourt').css('display', 'none');
+                    $('.Court').css('display', 'block');
+                }
+            }
+            if (CaseId != "00000000-0000-0000-0000-000000000000") {
+                if (AgIsHighCourt == true) {
+                    $('.AhighCourt').css('display', 'block');
+                    $('.ACourt').css('display', 'none');
+                }
+                else {
+                    $('.AhighCourt').css('display', 'none');
+                    $('.ACourt').css('display', 'block');
+                }
+            }
+        });
+    </script>
+
 }
 
 
